--- a/client/src/index.css
+++ b/client/src/index.css
@@ -49,6 +49,7 @@
 
 * {
   outline: none;
+  box-sizing: border-box;
 }
 
 body {
